# Hopson-Arcade

./: .clang-format  .gitignore  CMakeLists.txt  headerfix.py  rename.py
src/: CMakeLists.txt  dconfig  main.cpp
src/arcade/: CMakeLists.txt
src/arcade/arcade_state/: CMakeLists.txt  state_base.cpp  state_base.h
src/arcade/game/: CMakeLists.txt  game.cpp  game.h
src/arcade/gui/: CMakeLists.txt  button.cpp  button.h  label.cpp  label.h  stack_menu.cpp  stack_menu.h  textbox.cpp  textbox.h  widget.cpp  widget.h
src/arcade/input/: CMakeLists.txt  keyboard.cpp  keyboard.h
src/arcade/resources/: CMakeLists.txt  resource_holder.cpp  resource_holder.h  resource_manager.h
src/arcade/util/: CMakeLists.txt  animation.cpp  animation.h  file_util.cpp  file_util.h  fps_counter.cpp  fps_counter.h  maths.h  non_copyable.h  non_moveable.h  random.h  toggle_key.cpp  toggle_key.h
src/pong/: CMakeLists.txt  pong_player.h
src/pong/pong_server/: CMakeLists.txt  net.h  pong_server.cpp  pong_server.h
src/pong/pong_states/: CMakeLists.txt  pong_state_main_menu.cpp  pong_state_main_menu.h  state_error.cpp  state_error.h  state_lobby.cpp  state_lobby.h
src/space_invaders/: CMakeLists.txt  animation_renderer.cpp  animation_renderer.h  collidable.cpp  collidable.h  display_info.h  explosion.cpp  explosion.h  invader.cpp  invader.h  invader_manager.cpp  invader_manager.h  player.cpp  player.h  projectile.cpp  projectile.h  shield.cpp  shield.h  starry_background.cpp  starry_background.h  state_highscores.cpp  state_highscores.h  state_main_menu.cpp  state_main_menu.h  state_playing.cpp  state_playing.h  ufo.cpp  ufo.h  world.cpp  world.h
src/space_invaders/animation_base/: CMakeLists.txt  animation_renderer.cpp  invader_manager.cpp  invader_manager.h  starry_background.h  world.cpp
src/space_invaders/detection/: CMakeLists.txt
src/space_invaders/entity/: CMakeLists.txt  explosion.cpp  explosion.h  invader.cpp  invader.h  player.cpp  player.h  shield.h  ufo.cpp
src/space_invaders/space_invaders_states/: CMakeLists.txt  state_highscores.cpp  state_highscores.h  state_playing.cpp  state_playing.h
